--- a/blog/package.json
+++ b/blog/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
     "dotenv": "^6.1.0",
+    "event-stream": "^4.0.1",
     "express": "^4.16.4",
     "pug": "^2.0.3",
     "request": "^2.88.0"
